branches/v1.0.x/README.md
# Documentation for v1.0.x

 - [Overview](docs/1.0. Overview.md)
 - [APIs](docs/2.0. APIs.md)
   - [Common Keys](docs/2.1. APIs - Common Keys.md)
   - [Client Side Implementation Notes](docs/2.2. APIs - Client Side Implementation Notes.md)
   - [Server Side Implementation Notes](docs/2.3. APIs - Server Side Implementation Notes.md)
   - [Load Balancing & Redundancy](docs/2.4. APIs - Load Balancing & Redundancy.md)
 - [Discovery](docs/3.0. Discovery.md)
   - [Registered Operation](docs/3.1. Discovery - Registered Operation.md)
   - [Peer to Peer Operation](docs/3.2. Discovery - Peer to Peer Operation.md)
 - [Behaviour](docs/4.0. Behaviour.md)
   - [Registration](docs/4.1. Behaviour - Registration.md)
   - [Querying](docs/4.2. Behaviour - Querying.md)
 - [Data Model](docs/5.0. Data Model.md)
   - [Identifier Mapping](docs/5.1. Data Model - Identifier Mapping.md)
 - [Upgrade Path](docs/6.0. Upgrade Path.md)

# APIs for v1.0.x

 - [NodeAPI](html-APIs/NodeAPI.html)
 - [QueryAPI](html-APIs/QueryAPI.html)
 - [RegistrationAPI](html-APIs/RegistrationAPI.html)

# JSON Schemas for v1.0.x

 - [device](html-APIs/schemas/device.json)
 - [devices](html-APIs/schemas/devices.json)
 - [empty](html-APIs/schemas/empty.json)
 - [error](html-APIs/schemas/error.json)
 - [flow](html-APIs/schemas/flow.json)
 - [flows](html-APIs/schemas/flows.json)
 - [node](html-APIs/schemas/node.json)
 - [nodeapi-base](html-APIs/schemas/nodeapi-base.json)
 - [nodes](html-APIs/schemas/nodes.json)
 - [queryapi-base](html-APIs/schemas/queryapi-base.json)
 - [queryapi-subscription-response](html-APIs/schemas/queryapi-subscription-response.json)
 - [queryapi-subscriptions-response](html-APIs/schemas/queryapi-subscriptions-response.json)
 - [queryapi-v1.0-subscriptions-post-request](html-APIs/schemas/queryapi-v1.0-subscriptions-post-request.json)
 - [queryapi-v1.0-subscriptions-websocket](html-APIs/schemas/queryapi-v1.0-subscriptions-websocket.json)
 - [receiver](html-APIs/schemas/receiver.json)
 - [receivers](html-APIs/schemas/receivers.json)
 - [registrationapi-base](html-APIs/schemas/registrationapi-base.json)
 - [registrationapi-health-response](html-APIs/schemas/registrationapi-health-response.json)
 - [registrationapi-resource-response](html-APIs/schemas/registrationapi-resource-response.json)
 - [registrationapi-v1.0-resource-post-request](html-APIs/schemas/registrationapi-v1.0-resource-post-request.json)
 - [sender-target](html-APIs/schemas/sender-target.json)
 - [sender](html-APIs/schemas/sender.json)
 - [senders](html-APIs/schemas/senders.json)
 - [source](html-APIs/schemas/source.json)
 - [sources](html-APIs/schemas/sources.json)

# Examples for v1.0.x

 - [nodeapi-v1.0-base-get-200](examples/nodeapi-v1.0-base-get-200.json)
 - [nodeapi-v1.0-deviceid-get-200](examples/nodeapi-v1.0-deviceid-get-200.json)
 - [nodeapi-v1.0-devices-get-200](examples/nodeapi-v1.0-devices-get-200.json)
 - [nodeapi-v1.0-flowid-get-200](examples/nodeapi-v1.0-flowid-get-200.json)
 - [nodeapi-v1.0-flows-get-200](examples/nodeapi-v1.0-flows-get-200.json)
 - [nodeapi-v1.0-receiverid-get-200](examples/nodeapi-v1.0-receiverid-get-200.json)
 - [nodeapi-v1.0-receivers-get-200](examples/nodeapi-v1.0-receivers-get-200.json)
 - [nodeapi-v1.0-receivertarget-put-200](examples/nodeapi-v1.0-receivertarget-put-200.json)
 - [nodeapi-v1.0-receivertarget-put-request](examples/nodeapi-v1.0-receivertarget-put-request.json)
 - [nodeapi-v1.0-self-get-200](examples/nodeapi-v1.0-self-get-200.json)
 - [nodeapi-v1.0-senderid-get-200](examples/nodeapi-v1.0-senderid-get-200.json)
 - [nodeapi-v1.0-senders-get-200](examples/nodeapi-v1.0-senders-get-200.json)
 - [nodeapi-v1.0-sourceid-get-200](examples/nodeapi-v1.0-sourceid-get-200.json)
 - [nodeapi-v1.0-sources-get-200](examples/nodeapi-v1.0-sources-get-200.json)
 - [queryapi-v1.0-base-get-200](examples/queryapi-v1.0-base-get-200.json)
 - [queryapi-v1.0-deviceid-get-200](examples/queryapi-v1.0-deviceid-get-200.json)
 - [queryapi-v1.0-devices-get-200](examples/queryapi-v1.0-devices-get-200.json)
 - [queryapi-v1.0-flowid-get-200](examples/queryapi-v1.0-flowid-get-200.json)
 - [queryapi-v1.0-flows-get-200](examples/queryapi-v1.0-flows-get-200.json)
 - [queryapi-v1.0-nodeid-get-200](examples/queryapi-v1.0-nodeid-get-200.json)
 - [queryapi-v1.0-nodes-get-200](examples/queryapi-v1.0-nodes-get-200.json)
 - [queryapi-v1.0-receiverid-get-200](examples/queryapi-v1.0-receiverid-get-200.json)
 - [queryapi-v1.0-receivers-get-200](examples/queryapi-v1.0-receivers-get-200.json)
 - [queryapi-v1.0-senderid-get-200](examples/queryapi-v1.0-senderid-get-200.json)
 - [queryapi-v1.0-senders-get-200](examples/queryapi-v1.0-senders-get-200.json)
 - [queryapi-v1.0-sourceid-get-200](examples/queryapi-v1.0-sourceid-get-200.json)
 - [queryapi-v1.0-sources-get-200](examples/queryapi-v1.0-sources-get-200.json)
 - [queryapi-v1.0-subscriptionid-get-200](examples/queryapi-v1.0-subscriptionid-get-200.json)
 - [queryapi-v1.0-subscriptions-get-200](examples/queryapi-v1.0-subscriptions-get-200.json)
 - [queryapi-v1.0-subscriptions-post-200](examples/queryapi-v1.0-subscriptions-post-200.json)
 - [queryapi-v1.0-subscriptions-post-request](examples/queryapi-v1.0-subscriptions-post-request.json)
 - [registrationapi-v1.0-base-get-200](examples/registrationapi-v1.0-base-get-200.json)
 - [registrationapi-v1.0-health-get-200](examples/registrationapi-v1.0-health-get-200.json)
 - [registrationapi-v1.0-health-post-200](examples/registrationapi-v1.0-health-post-200.json)
 - [registrationapi-v1.0-resource-get-200](examples/registrationapi-v1.0-resource-get-200.json)
 - [registrationapi-v1.0-resource-post-200](examples/registrationapi-v1.0-resource-post-200.json)
 - [registrationapi-v1.0-resource-post-request](examples/registrationapi-v1.0-resource-post-request.json)
